src/cli/project/export/snapshots/pixi__cli__project__export__conda_explicit_spec__tests__test_render_conda_explicit_spec_default_osx-arm64.snap
---
source: src/cli/project/export/conda_explicit_spec.rs
expression: "fs::read_to_string(file_path).unwrap()"
---
# Generated by `pixi project export`
# platform: osx-arm64
@EXPLICIT
https://conda.anaconda.org/conda-forge/osx-arm64/bzip2-1.0.8-h99b78c6_7.conda#fc6948412dbbbe9a4c9ddbbcfe0a79ab
https://conda.anaconda.org/conda-forge/osx-arm64/ca-certificates-2024.8.30-hf0a4a13_0.conda#40dec13fd8348dbe303e57be74bd3d35
https://conda.anaconda.org/conda-forge/osx-arm64/libexpat-2.6.3-hf9b8971_0.conda#5f22f07c2ab2dea8c66fe9585a062c96
https://conda.anaconda.org/conda-forge/osx-arm64/libffi-3.4.2-h3422bc3_5.tar.bz2#086914b672be056eb70fd4285b6783b6
https://conda.anaconda.org/conda-forge/osx-arm64/libsqlite-3.46.1-hc14010f_0.conda#58050ec1724e58668d0126a1615553fa
https://conda.anaconda.org/conda-forge/osx-arm64/libzlib-1.3.1-hfb2fe0b_1.conda#636077128927cf79fd933276dc3aed47
https://conda.anaconda.org/conda-forge/osx-arm64/ncurses-6.5-h7bae524_1.conda#cb2b0ea909b97b3d70cd3921d1445e1a
https://conda.anaconda.org/conda-forge/osx-arm64/openssl-3.3.2-h8359307_0.conda#1773ebccdc13ec603356e8ff1db9e958
https://conda.anaconda.org/conda-forge/osx-arm64/python-3.12.6-h739c21a_0_cpython.conda#1d0f564edfc8121b35a4dc2d25b62863
https://conda.anaconda.org/conda-forge/osx-arm64/readline-8.2-h92ec313_1.conda#8cbb776a2f641b943d413b3e19df71f4
https://conda.anaconda.org/conda-forge/osx-arm64/tk-8.6.13-h5083fa2_1.conda#b50a57ba89c32b62428b71a875291c9b
https://conda.anaconda.org/conda-forge/noarch/tzdata-2024a-h8827d51_1.conda#8bfdead4e0fff0383ae4c9c50d0531bd
https://conda.anaconda.org/conda-forge/osx-arm64/xz-5.2.6-h57fd34a_0.tar.bz2#39c6b54e94014701dd157f4f576ed211
